Bug 279333 - Panels can be moved even if locked
Summary: Panels can be moved even if locked
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.7
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-03 22:40 UTC by Frank Steinmetzger
Modified: 2012-10-30 22:12 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2011-08-03 22:40:50 UTC
Version:           1.7 (using KDE 4.7.0) 
OS:                Linux

I just found out by accident that a panel can be moved even if the panel layout is locked. If there are two panels beneath each other, e.g. Places and Folders, then one can grab a panel if one clicks on and then drags the thin strip right under the separator between the two.

Reproducible: Always

Steps to Reproduce:
- Have a locked layout in Dolphin with some adjacent panels and a size grip between them.
- move the mouse to a pixel line just below the separator.
- click+hold LMB there, move the mouse

Actual Results:  
The panel is dragged.

Expected Results:  
The panel should not be dragged, because the layout is supposed to be fixed.
Comment 1 Frank Steinmetzger 2012-08-13 00:06:34 UTC
Just a little push -- it’s still valid in 4.9.
Comment 2 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:19:55 UTC
Resetting assignee to default as per bug #305719
Comment 3 Emmanuel Pescosta 2012-10-30 13:28:00 UTC
Review-Request: https://git.reviewboard.kde.org/r/107135/
Comment 4 Emmanuel Pescosta 2012-10-30 22:12:14 UTC
Git commit 0b16a06ca1ec249ee2eeb0c74fe17162d6fcf434 by Emmanuel Pescosta.
Committed on 30/10/2012 at 23:10.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fix Bug 279333 - Panels can be moved even if locked
FIXED-IN: 4.9.3
REVIEW: 107135

M  +4    -0    dolphin/src/dolphindockwidget.cpp

http://commits.kde.org/kde-baseapps/0b16a06ca1ec249ee2eeb0c74fe17162d6fcf434