Fix Bug 279333 - Panels can be moved even if locked

BUG: 279333
FIXED-IN: 4.9.3
REVIEW: 107135